--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <li><a href="" class="home"><i class="fa-solid fa-house"></i> HOME</a></li>
             <li><a href="services.html"><i class="fa-solid fa-gas-pump"></i> SERVICES</a></li>
             <li><a href=""><i class="fa-solid fa-question"></i> ABOUT</a></li>
-            <li><a href="#contact-us"> CONTACT US</a></li>
+            <li><a href="#contact-us"><i class="fa-solid fa-phone"></i> CONTACT US</a></li>
             <li class="menu"><i class="fa-solid fa-bars"></i></li>
         </ul>
     </nav>
@@ -38,21 +38,21 @@
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="https://i.pinimg.com/564x/10/37/9a/10379a03d8f4fd830e825a6b58e087d5.jpg" class="d-block w-100" alt="...">
+                <img src="images/catazi1.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                   <h5>First slide label</h5>
                   <p>Some representative placeholder content for the first slide.</p>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="https://i.pinimg.com/564x/f3/f0/5b/f3f05ba1dbf7af0481048c5737f46530.jpg" class="d-block w-100" alt="...">
+                <img src="images/catazi2.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                   <h5>Second slide label</h5>
                   <p>Some representative placeholder content for the second slide.</p>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="https://i.pinimg.com/564x/69/f3/2f/69f32fe9f0047944295803a4aacf7997.jpg" class="d-block w-100" alt="...">
+                <img src="images/catazi3.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                   <h5>Third slide label</h5>
                   <p>Some representative placeholder content for the third slide.</p>
