--- a/services.html
+++ b/services.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Services</title>
     <link rel="stylesheet" href="styles/service.css">
 </head>
 <body class="open-sans">
@@ -18,10 +18,25 @@
         </ul>
     </nav>
 
-    <div class="header1">
-        <div class="headerimg">
-            <img src="https://i.pinimg.com/564x/69/f3/2f/69f32fe9f0047944295803a4aacf7997.jpg" class="d-block w-100" alt="...">
+    <div class="header">
+        <div class="header-img">
+            <img src="images/catazi1.jpg" alt="...">
         </div>
+    </div>
+    <div class="content">
+        <div class="service">
+            <div class="topic gas-delivery">
+                <h1>GAS DELIVERY . . . <i class="fa-solid fa-truck" style="color: #9ADE7B;"></i></h1>
+                <img src="images/catazi4.jpg" alt="">
+
+                <p>In the fast-paced rhythm of modern life, convenience is paramount. Our gas delivery service stands as a beacon of efficiency, ensuring that your energy needs are seamlessly met without disrupting your daily routine.</p>
+
+                <p>Reliability is the cornerstone of our gas delivery service. Say goodbye to the uncertainty of traditional refills and hello to consistent, timely deliveries tailored to your schedule. </p>
+            </div>
+        </div>
+
+
+        <div class="sidebar"></div>
     </div>
 
     <!-- <div class="gas-delivery">
@@ -31,6 +46,7 @@
     </div>
 
 
-    
+    <script src="https://kit.fontawesome.com/71f0691d51.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>    
 </body>
 </html>
