--- a/services.html
+++ b/services.html
@@ -8,11 +8,11 @@
 </head>
 <body class="open-sans">
     <nav class="navbar">
-        <div class="logo">CATAZI</div>
+        <div class="logo"><img src="images/catazi_logo.png" alt=""></div>
         <ul>
             <li><a href="index.html" class="home"><i class="fa-solid fa-house"></i> HOME</a></li>
             <li class="services"><a href="services.html"><i class="fa-solid fa-gas-pump"></i> SERVICES</a></li>
-            <li><a href=""><i class="fa-solid fa-question"></i> ABOUT</a></li>
+            <li><a href=""><i class="fa-solid fa-microscope"></i> ABOUT</a></li>
             <li><a href="#contact-us"> CONTACT US</a></li>
             <li class="menu"><i class="fa-solid fa-bars"></i></li>
         </ul>
@@ -27,7 +27,7 @@
         <div class="service">
             <div class="topic gas-delivery">
                 <h1>GAS DELIVERY . . . <i class="fa-solid fa-truck" style="color: #9ADE7B;"></i></h1>
-                <img src="images/catazi4.jpg" alt="">
+                <img src="images/gas delivery.jpg" alt="">
 
                 <p>In the fast-paced rhythm of modern life, convenience is paramount. Our gas delivery service stands as a beacon of efficiency, ensuring that your energy needs are seamlessly met without disrupting your daily routine.</p>
 
@@ -36,7 +36,9 @@
         </div>
 
 
-        <div class="sidebar"></div>
+        <div class="sidebar" onscroll="scroll();">
+            
+        </div>
     </div>
 
     <!-- <div class="gas-delivery">
