--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             <li><a href="services.html"><i class="fa-solid fa-gas-pump"></i> SERVICES</a></li>
             <li><a href=""><i class="fa-solid fa-microscope"></i> ABOUT</a></li>
             <li><a href="#contact-us"><i class="fa-solid fa-phone"></i> CONTACT US</a></li>
+            <li class="menu"><i class="fa-solid fa-bars"></i></li>
         </ul>
     </nav>
 
@@ -138,7 +139,7 @@
         <li><a href=""><i class="fa-brands fa-square-instagram"></i></a></li>
         <li><a href=""><i class="fa-brands fa-twitter"></i></a></li>
         <li><a href=""><i class="fa-brands fa-linkedin"></i></a></li>
-        <li><p>Contact us</p></li>
+        <li class="contact-p"><p>Contact us</p></li>
       </ul>
     </div>
 
