--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <body class="open-sans">
     <nav class="navbar">
-        <div class="logo"><img src="images/catazi_logo.png" alt=""></div>
+        <div class="logo"><img src="images/catazi_logo.jpg" alt=""></div>
         <ul>
             <li class="home"><a href=""><i class="fa-solid fa-house"></i> HOME</a></li>
             <li><a href="services.html"><i class="fa-solid fa-gas-pump"></i> SERVICES</a></li>
@@ -40,22 +40,22 @@
               <div class="carousel-item active">
                 <img src="images/catazi1.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                  <h5>First slide label</h5>
-                  <p>Some representative placeholder content for the first slide.</p>
+                  <h5>Dedicated Workforce</h5>
+                  <p>From Administration to sales and Security - across board devotion to meeeting your service needs.</p>
                 </div>
               </div>
               <div class="carousel-item">
                 <img src="images/catazi2.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                  <h5>Second slide label</h5>
-                  <p>Some representative placeholder content for the second slide.</p>
+                  <h5>Admin and Security</h5>
+                  <p>Built with Ease of service delivery at heart</p>
                 </div>
               </div>
               <div class="carousel-item">
                 <img src="images/catazi3.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                  <h5>Third slide label</h5>
-                  <p>Some representative placeholder content for the third slide.</p>
+                  <h5>Tanks and Dispenser</h5>
+                  <p>Service Point prioritizing safety and Consumer Satisfaction.</p>
                 </div>
               </div>
             </div>
