--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 
 <body class="open-sans">
-    <nav class="navbar">
+    <nav class="navbar large-screen">
         <div class="logo"><img src="images/catazi_logo.jpg" alt=""></div>
         <ul>
             <li class="home"><a href=""><i class="fa-solid fa-house"></i> HOME</a></li>
@@ -26,6 +26,15 @@
             <li><a href=""><i class="fa-solid fa-microscope"></i> ABOUT</a></li>
             <li><a href="#contact-us"><i class="fa-solid fa-phone"></i> CONTACT US</a></li>
             <li class="menu"><i class="fa-solid fa-bars"></i></li>
+        </ul>
+    </nav>
+    <nav class="navbar mobile-menu">
+        <ul>
+            <li class="close"><i class="fa-solid fa-xmark" style="font-size: 30px;"></i></li>
+            <li class="home"><a href=""><i class="fa-solid fa-house"></i> HOME</a></li>
+            <li><a href="services.html"><i class="fa-solid fa-gas-pump"></i> SERVICES</a></li>
+            <li><a href=""><i class="fa-solid fa-microscope"></i> ABOUT</a></li>
+            <li><a href="#contact-us"><i class="fa-solid fa-phone"></i> CONTACT US</a></li>
         </ul>
     </nav>
 
