mobile responsive menu

--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
 
 <body class="open-sans">
     <nav class="navbar large-screen">
-        <div class="logo"><img src="images/catazi_logo.jpg" alt=""></div>
+        <div class="logo"><img src="images/catazi_logo.jpg" alt="catazi logo" ></div>
         <ul>
             <li class="home"><a href=""><i class="fa-solid fa-house"></i> HOME</a></li>
             <li><a href="services.html"><i class="fa-solid fa-gas-pump"></i> SERVICES</a></li>
             <li><a href=""><i class="fa-solid fa-microscope"></i> ABOUT</a></li>
             <li><a href="#contact-us"><i class="fa-solid fa-phone"></i> CONTACT US</a></li>
-            <li class="menu"><i class="fa-solid fa-bars"></i></li>
+            <li class="menu"><i class="fa-solid fa-bars" style="font-size: 2rem;"></i></li>
         </ul>
     </nav>
     <nav class="navbar mobile-menu">
