--- a/index.html
+++ b/index.html
@@ -14,19 +14,26 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bevan:ital@0;1&display=swap" rel="stylesheet">
     
 </head>
 
 <body class="open-sans">
     <nav class="navbar large-screen">
-        <div class="logo"><img src="images/catazi_logo.jpg" alt="catazi logo" ></div>
-        <ul>
+        <div class="logo">
+          <img src="images/catazi_logo.jpg" alt="catazi logo" >
+          <span>CATAZI</span>
+        </div>
+        <div class="navigations"> 
+          <ul>
             <li class="home"><a href=""><i class="fa-solid fa-house"></i> HOME</a></li>
             <li><a href="services.html"><i class="fa-solid fa-gas-pump"></i> SERVICES</a></li>
             <li><a href=""><i class="fa-solid fa-microscope"></i> ABOUT</a></li>
             <li><a href="#contact-us"><i class="fa-solid fa-phone"></i> CONTACT US</a></li>
-            <li class="menu"><i class="fa-solid fa-bars" style="font-size: 2rem;"></i></li>
+            <li class="menu"><i class="fa-solid fa-bars" style="font-size: 1rem;"></i></li>
         </ul>
+        </div>
+        
     </nav>
     <nav class="navbar mobile-menu">
         <ul>
