--- a/services.html
+++ b/services.html
@@ -5,17 +5,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Services</title>
     <link rel="stylesheet" href="styles/service.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bevan:ital@0;1&display=swap" rel="stylesheet">
 </head>
 <body class="open-sans">
-    <nav class="navbar">
-        <div class="logo"><img src="images/catazi_logo.png" alt=""></div>
+    <nav class="navbar large-screen">
+        <div class="logo">
+            <img src="images/catazi_logo.jpg" alt="catazi logo" >
+        </div>
+        <div class="navigations">
+            <ul>
+                <li class="home"><a href="index.html"><i class="fa-solid fa-house"></i> HOME</a></li>
+                <li class="services"><a href="services.html"><i class="fa-solid fa-gas-pump"></i> SERVICES</a></li>
+                <li><a href=""><i class="fa-solid fa-microscope"></i> ABOUT</a></li>
+                <li><a href="#contact-us"><i class="fa-solid fa-phone"></i> CONTACT US</a></li>
+                <li class="menu"><i class="fa-solid fa-bars" style="font-size: 1rem;"></i></li>
+            </ul>
+        </div>
+    </nav>
+    <nav class="navbar mobile-menu">
         <ul>
-            <li><a href="index.html" class="home"><i class="fa-solid fa-house"></i> HOME</a></li>
-            <li class="services"><a href="services.html"><i class="fa-solid fa-gas-pump"></i> SERVICES</a></li>
+            <li class="close"><i class="fa-solid fa-xmark" style="font-size: 30px;"></i></li>
+            <li class="home"><a href=""><i class="fa-solid fa-house"></i> HOME</a></li>
+            <li><a href="services.html"><i class="fa-solid fa-gas-pump"></i> SERVICES</a></li>
             <li><a href=""><i class="fa-solid fa-microscope"></i> ABOUT</a></li>
-            <li><a href="#contact-us"> <i class="fa-solid fa-phone"></i> CONTACT US</a></li>
+            <li><a href="#contact-us"><i class="fa-solid fa-phone"></i> CONTACT US</a></li>
+            <li class="menu"><i class="fa-solid fa-bars"></i></li>
         </ul>
     </nav>
+
 
     <div class="header">
         <div class="header-img">
@@ -112,6 +132,6 @@
 
     <script src="https://kit.fontawesome.com/71f0691d51.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>   
-    <script src="service.js"></script> 
+    <script src="service.js"></script>    
 </body>
 </html>
