--- a/services.html
+++ b/services.html
@@ -14,6 +14,7 @@
     <nav class="navbar large-screen">
         <div class="logo">
             <img src="images/catazi_logo.jpg" alt="catazi logo" >
+          <span>CATAZI</span>
         </div>
         <div class="navigations">
             <ul>
@@ -25,6 +26,15 @@
             </ul>
         </div>
     </nav>
+    <!-- <nav class="navbar mobile-menu">
+        <ul>
+            <li class="close"><i class="fa-solid fa-xmark" style="font-size: 30px;"></i></li>
+            <li class="home"><a href=""><i class="fa-solid fa-house"></i> HOME</a></li>
+            <li><a href="services.html"><i class="fa-solid fa-gas-pump"></i> SERVICES</a></li>
+            <li><a href=""><i class="fa-solid fa-microscope"></i> ABOUT</a></li>
+            <li><a href="#contact-us"><i class="fa-solid fa-phone"></i> CONTACT US</a></li>
+        </ul>
+    </nav> -->
 
 
     <div class="header">
