updated mobile menu

--- a/services.html
+++ b/services.html
@@ -18,7 +18,7 @@
         </div>
         <div class="navigations">
             <ul>
-                <li class="home"><a href="index.html"><i class="fa-solid fa-house"></i> HOME</a></li>
+                <li class="home" onclick="reverse();"><a href="index.html"><i class="fa-solid fa-house"></i> HOME</a></li>
                 <li class="services"><a href="services.html"><i class="fa-solid fa-gas-pump"></i> SERVICES</a></li>
                 <li><a href=""><i class="fa-solid fa-microscope"></i> ABOUT</a></li>
                 <li><a href="#contact-us"><i class="fa-solid fa-phone"></i> CONTACT US</a></li>
@@ -26,15 +26,15 @@
             </ul>
         </div>
     </nav>
-    <!-- <nav class="navbar mobile-menu">
+    <nav class="navbar mobile-menu">
         <ul>
-            <li class="close"><i class="fa-solid fa-xmark" style="font-size: 30px;"></i></li>
-            <li class="home"><a href=""><i class="fa-solid fa-house"></i> HOME</a></li>
-            <li><a href="services.html"><i class="fa-solid fa-gas-pump"></i> SERVICES</a></li>
+            <li class="close"><i class="fa-solid fa-xmark" style="font-size: 30px;  color: #9ADE7B;"></i></li>
+            <li class="home"><a href="index.html"><i class="fa-solid fa-house"></i> HOME</a></li>
+            <li onclick="reverse();"><a href="services.html"><i class="fa-solid fa-gas-pump"></i> SERVICES</a></li>
             <li><a href=""><i class="fa-solid fa-microscope"></i> ABOUT</a></li>
             <li><a href="#contact-us"><i class="fa-solid fa-phone"></i> CONTACT US</a></li>
         </ul>
-    </nav> -->
+    </nav>
 
 
     <div class="header">
